# cloth-simulation

./: .gitignore  CMakeLists.txt  README.md  main.cpp
cmake/: FindGLFW3.cmake  FindGLM.cmake
shaders/: axis_fs.glsl  axis_vs.glsl  cloth_fs.glsl  cloth_vs.glsl  grid_fs.glsl  vs.cg
src/: Application.cpp  Application.h  Bitmap.h  Cloth.cpp  Cloth.h  main.cpp  utils.cpp  utils.h
